testsuite/tests/grammar/invalid_skip/test.out
test.lkt:4:29: error: Skip parsers can only create error nodes
4 |     @main_rule main_rule <- skip(Example)
  |                             ^^^^^^^^^^^^^

Done
